--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "webpack": "^2.3.3"
   },
   "dependencies": {
